# vellum

./: .env.example  .gitignore  Makefile  README.md  REWRITE_SPEC.md  SPEC.md  alembic.ini  pyproject.toml
.do/: app.yaml.template
.github/workflows/: ci.yml  deploy-digitalocean.yml
cli/veritext-verify-go/: README.md  go.mod  main.go
docker/: .dockerignore  Dockerfile  docker-compose.yml  entrypoint.sh
docs/: COMPLIANCE.md  THREAT_MODEL.md  api.md  architecture.md  digitalocean-deploy.md  features.md
docs/specs/: proof-bundle-v2.schema.json
extension/: README.md  build.js  manifest.json  package-lock.json  package.json  tsconfig.json
extension/__tests__/: payload.test.ts
extension/background/: background.ts
extension/content/: content.ts  highlighter.ts  scanner.ts
extension/demo/: social-post.html
extension/popup/: popup.css  popup.html  popup.ts
extension/shared/: api.ts  constants.ts  messages.ts  payload.ts
frontend/: .env.example  .eslintrc.cjs  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/scripts/: snap.mjs
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/api/: chain.ts  chat.ts  client.test.ts  client.ts  companies.ts  demo.ts  registry.ts  types.ts
frontend/src/auth/: AuthGuard.tsx  AuthProvider.tsx  AuthTokenBridge.tsx  useAuth.ts
frontend/src/components/: ChainExplorer.tsx  ErrorBoundary.tsx  ModelSelector.tsx  ProofBundleViewer.tsx  WatermarkBadge.tsx
frontend/src/config/: env.ts
frontend/src/hooks/: useDemoIdentity.ts  useEcdsa.ts  useEvmWallet.ts  useProofBundle.ts  useRouteDocumentTitle.ts  useSolanaWallet.ts  useWatermark.ts  walletMessages.ts
frontend/src/layout/: AppShell.tsx  Footer.module.css  Footer.tsx  Masthead.module.css  Masthead.tsx  PageContainer.tsx
frontend/src/lib/: hash.ts  motion.ts
frontend/src/pages/: Chain.tsx  Companies.tsx  Cover.module.css  Cover.tsx  Dashboard.tsx  DemoOverview.tsx  GenerateAndAnchor.tsx  GuidedDemo.tsx  Landing.tsx  Ledger.module.css  Ledger.tsx  Principles.module.css  Principles.tsx  Studio.module.css  Studio.tsx  Verify.tsx
frontend/src/styles/: fonts.css  globals.css  reset.css  tokens.ts
scripts/: bootstrap.sh  dev.sh  seed.sh  setup_auth0.sh  setup_solana.sh
src/vellum/: __init__.py  app.py
src/vellum/api/: __init__.py  chain.py  chat.py  companies.py  demo.py  deps.py  health.py  registry.py  responses.py  solana.py
src/vellum/auth/: __init__.py  ecdsa.py  jwt.py  permissions.py  wallets.py
src/vellum/chain/: __init__.py  factory.py  protocol.py  simulated.py  solana.py
src/vellum/config/: __init__.py  enums.py  settings.py
src/vellum/db/: __init__.py  connection.py  schema.py
src/vellum/middleware/: __init__.py  errors.py  logging.py
src/vellum/models/: __init__.py  chain.py  chat.py  company.py  registry.py
src/vellum/providers/: __init__.py  base.py  bedrock.py  fixture.py  google.py  minimax.py  router.py
src/vellum/services/: __init__.py  anchor_service.py  chat_service.py  proof_builder.py  signing_service.py  watermark_service.py
src/veritext/: __init__.py  app.py
src/veritext/api/: __init__.py  chain.py  chat.py  companies.py  demo.py  deps.py  health.py  registry.py  solana.py
src/veritext/auth/: __init__.py  ecdsa.py  jwt.py  permissions.py
src/veritext/chain/: __init__.py  borsh_schema.py  protocol.py  simulated.py  solana.py
src/veritext/cli/: seed.py  verify.py
src/veritext/config/: __init__.py  enums.py  settings.py
src/veritext/db/: __init__.py  connection.py  repositories.py
src/veritext/middleware/: __init__.py  errors.py  logging.py
src/veritext/models/: __init__.py  chain.py  chat.py  company.py  proof_bundle.py  registry.py
src/veritext/providers/: __init__.py  base.py  fixture.py  google.py  (+1 more)
tests/: conftest.py
tests/adversarial/: conftest.py  test_attacks.py
tests/e2e/: test_extension_detection.py
tests/integration/: test_api_anchor.py  test_api_chain.py  test_api_chat.py  test_api_companies.py  test_api_health.py  test_auth_flow.py  test_companies_rotate.py  test_full_flow.py  test_health.py  test_solana_local.py  test_verify_cli.py
tests/unit/: test_bch.py  test_borsh.py  test_ecdsa.py  test_genwatermark.py  test_jcs.py  test_jwt.py  test_merkle.py  test_payload.py  test_proof_builder.py  test_providers.py  test_simulated_chain.py  test_wallets.py  test_watermark.py  test_zero_width.py
(+59 files in other folders)
