[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "veritext"
version = "2.0.0"
description = "Cryptographic provenance tags for AI-generated text — invisible Unicode tags + ECDSA + Merkle-batched chain anchoring."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "Veritext"}]
dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-dotenv>=1.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    # Database
    "aiosqlite>=0.21",
    # Auth
    "python-jose[cryptography]>=3.3",
    "httpx>=0.28",
    # Crypto
    "eth-account>=0.13",
    "eth-keys>=0.6",
    "cryptography>=43",       # AES-128-CCM (improvement #7)
    # Canonical JSON
    "rfc8785>=0.1.4",         # JCS (improvement #1)
    # Borsh memo encoding
    "borsh-construct>=0.1.0", # (improvement #13)
    # Grapheme support
    "regex>=2024.11",         # \X grapheme cluster (improvement #14)
    # LLM providers (Google + Fixture)
    "google-generativeai>=0.8",
    # Logging
    "structlog>=24.4",
    # Watermark library is a workspace local package
    # No external watermark dep; built from packages/watermark
]

[project.optional-dependencies]
solana = [
    "solana>=0.35",
    "solders>=0.25",
]
genwatermark = [
    # SynthID-Text + transformers + torch (heavy, gated)
    "transformers>=4.45",
    "torch>=2.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "hypothesis>=6.115",      # Property-based + adversarial tests (#12)
    "ruff>=0.8",
    "mypy>=1.13",
    "alembic>=1.14",
]

[project.scripts]
veritext-verify = "veritext.cli.verify:main"
veritext-server = "veritext.app:run"

[tool.hatch.build.targets.wheel]
packages = ["src/veritext", "packages/watermark", "packages/genwatermark", "packages/merklebatch"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src", "packages"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/veritext", "packages/watermark", "packages/genwatermark", "packages/merklebatch"]
omit = ["**/tests/*", "**/_proto_*.py"]
