[project]
name = "vellum"
version = "2.0.0"
description = "Vellum v2 — Provenance tracking platform for AI-generated text."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Vellum", email = "team@vellum.io" },
]
dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-dotenv>=1.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    # Database
    "aiosqlite>=0.21",
    # Auth
    "python-jose[cryptography]>=3.3",
    "httpx>=0.28",
    # Crypto (ECDSA)
    "eth-account>=0.13",
    "eth-keys>=0.6",
    "anthropic>=0.42",
    "boto3>=1.35",
    # Logging
    "structlog>=24.4",
    "google-genai>=1.73.1",
]

[project.optional-dependencies]
solana = [
    "solana>=0.35",
    "solders>=0.25",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "alembic>=1.14",
    "playwright>=1.50",
    "asgi-lifespan>=2.1",
]

[project.scripts]
vellum = "vellum.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vellum", "packages/watermark"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
watermark = { workspace = true }

[tool.uv.workspace]
members = ["packages/watermark"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
ignore = ["E501", "B008", "N818"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
